# aec3-py

./: Cargo.toml  README.md  justfile  pyproject.toml
examples/: demo.py  demo2.py  generate_wavs.py
src/: lib.rs
