[build-system]
requires = ["maturin>=1.0,<2.0", "numpy>=1.21"]
build-backend = "maturin"

[project]
name = "aec3-py"
version = "0.1.0"
description = "PyO3 + NumPy wrapper for aec3-rs"
requires-python = ">=3.8"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
